<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scan_detection_fusion</name>
  <version>0.1.0</version>
  <description>
    Reusable ROS 2 LiDAR-camera fusion. Matches 2D object detections
    (vision_msgs/Detection2DArray) to LaserScan points, producing range-resolved,
    semantically labeled obstacles and class-aware footprint polygons for navigation.
  </description>

  <!-- TODO: real maintainer; license is Aarav's call (Apache-2.0 or BSD-3-Clause) -->
  <maintainer email="aaravbansal.x@gmail.com">Aarav Bansal</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>